# Comfyui-SceneDetect

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pyscenedetect_nodes.py  requirements.txt
nodes/: __init__.py  pyscenedetect_to_images.py
utils/: __init__.py  pyscenedetect_to_images.py  video_ops.py
workflow/: pyscene_workflow.json
