[project]
name = "scenedetect"
description = "Comfyui-SceneDetect is a ComfyUI custom node that uses PySceneDetect to locate scene boundaries in a video and emit one representative frame per scene as an `IMAGE` batch. It also returns per-scene metadata as JSON (`STRING`) and the total number of detected scenes (`INT`)."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["scenedetect>=0.6,<0.7", "opencv-python>=4.9,<5", "numpy"]

[project.urls]
Repository = "https://github.com/hndrr/Comfyui-SceneDetect"
#  Used by Comfy Registry https://registry.comfy.org
# Documentation = "https://github.com/hndrr/Comfyui-SceneDetect/wiki"
# "Bug Tracker" = "https://github.com/hndrr/Comfyui-SceneDetect/issues"

[tool.comfy]
PublisherId = "hndr"
DisplayName = "Comfyui-SceneDetect"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
